--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,17 +3,16 @@
 
 @custom-variant dark (&:is(.dark *));
 
-
 body {
   pointer-events: auto !important;
 }
 
 .material-symbols-outlined {
   font-variation-settings:
-    'FILL' 0,
-    'wght' 400,
-    'GRAD' 0,
-    'opsz' 24
+    "FILL" 0,
+    "wght" 400,
+    "GRAD" 0,
+    "opsz" 24;
 }
 
 .adp,
@@ -21,21 +20,21 @@ body {
 .adp button {
   font-family: Roboto, Arial, sans-serif;
   font-weight: 300;
-  color: #2c2c2c
+  color: #2c2c2c;
 }
 
 .adp b,
 .adp-list b {
-  font-weight: 400
+  font-weight: 400;
 }
 
 .adp-warnbox {
-  margin: 5px 0 3px 0
+  margin: 5px 0 3px 0;
 }
 
 .warnbox-content {
   background: #fff1a8;
-  padding: 5px 6px
+  padding: 5px 6px;
 }
 
 .warnbox-c1,
@@ -44,15 +43,15 @@ body {
   font-size: 1px;
   height: 1px;
   margin-top: 0;
-  overflow: hidden
+  overflow: hidden;
 }
 
 .warnbox-c1 {
-  margin: 0 2px
+  margin: 0 2px;
 }
 
 .warnbox-c2 {
-  margin: 0 1px
+  margin: 0 1px;
 }
 
 .adp-list {
@@ -62,20 +61,20 @@ body {
   padding: 4px;
   font-family: Roboto, Arial, sans-serif;
   font-weight: 300;
-  color: #2c2c2c
+  color: #2c2c2c;
 }
 
 .adp-fullwidth {
-  width: 100%
+  width: 100%;
 }
 
 .adp-listsel {
   background: #eee;
-  text-decoration: none
+  text-decoration: none;
 }
 
 .adp-listheader {
-  padding: 4px
+  padding: 4px;
 }
 
 .adp-placemark {
@@ -84,34 +83,33 @@ body {
   color: #000;
   cursor: pointer;
   margin: 10px 0 10px 0;
-  vertical-align: middle
+  vertical-align: middle;
 }
 
 img.adp-marker {
   width: 22px;
-  height: 40px
+  height: 40px;
 }
 
 img.adp-marker2 {
   width: 26px;
-  height: 37px
+  height: 37px;
 }
 
 .adp-details,
 .adp-legal {
-  color: #676767
+  color: #676767;
 }
 
 .adp-summary {
-  padding: 0 3px 3px 3px
+  padding: 0 3px 3px 3px;
 }
 
 .adp-step,
 .adp-substep {
-
   margin: 0;
-  padding: .3em 3px .3em 3px;
-  vertical-align: top
+  padding: 0.3em 3px 0.3em 3px;
+  vertical-align: top;
 }
 
 .adp-list img,
@@ -120,42 +118,42 @@ img.adp-marker2 {
   height: 15px;
   position: relative;
   top: 2px;
-  margin-right: 3px
+  margin-right: 3px;
 }
 
 .adp-distance {
-  white-space: nowrap
+  white-space: nowrap;
 }
 
 .adp-step,
 .adp-text {
-  width: 100%
+  width: 100%;
 }
 
 .adp-directions {
   cursor: pointer;
-  border-collapse: collapse
+  border-collapse: collapse;
 }
 
 .adp-list .gm-arrow {
   width: 8px;
   height: 9px;
-  margin: 5px 0 3px
+  margin: 5px 0 3px;
 }
 
 .adp-agencies {
   font-size: 80%;
-  margin: 5px 0
+  margin: 5px 0;
 }
 
 .adp-summary-duration {
   float: right;
   margin-left: 7px;
-  white-space: nowrap
+  white-space: nowrap;
 }
 
 .adp-substep .gm-line {
-  margin-right: 4px
+  margin-right: 4px;
 }
 
 .adp-substep .adp-stepicon {
@@ -164,7 +162,7 @@ img.adp-marker2 {
   top: 0;
   left: 0;
   width: 16px;
-  height: 16px
+  height: 16px;
 }
 
 .adp-substep .adp-stepicon .adp-maneuver {
@@ -173,81 +171,81 @@ img.adp-marker2 {
   position: absolute;
   left: 0;
   width: 16px;
-  height: 16px
+  height: 16px;
 }
 
 .adp-substep .adp-stepicon .adp-maneuver.adp-ferry {
-  background-position: 0 -614px
+  background-position: 0 -614px;
 }
 
 .adp-substep .adp-stepicon .adp-maneuver.adp-ferry-train {
-  background-position: 0 -566px
+  background-position: 0 -566px;
 }
 
 .adp-substep .adp-stepicon .adp-maneuver.adp-merge {
-  background-position: 0 -143px
+  background-position: 0 -143px;
 }
 
 .adp-substep .adp-stepicon .adp-maneuver.adp-straight {
-  background-position: 0 -534px
+  background-position: 0 -534px;
 }
 
 .adp-substep .adp-stepicon .adp-maneuver.adp-fork-left {
-  background-position: 0 -550px
+  background-position: 0 -550px;
 }
 
 .adp-substep .adp-stepicon .adp-maneuver.adp-ramp-left {
-  background-position: 0 -598px
+  background-position: 0 -598px;
 }
 
 .adp-substep .adp-stepicon .adp-maneuver.adp-roundabout-left {
-  background-position: 0 -197px
+  background-position: 0 -197px;
 }
 
 .adp-substep .adp-stepicon .adp-maneuver.adp-turn-left,
 .adp-substep .adp-stepicon .adp-maneuver.adp-keep-left {
-  background-position: 0 -413px
+  background-position: 0 -413px;
 }
 
 .adp-substep .adp-stepicon .adp-maneuver.adp-turn-sharp-left {
-  background-position: 0 0
+  background-position: 0 0;
 }
 
 .adp-substep .adp-stepicon .adp-maneuver.adp-turn-slight-left {
-  background-position: 0 -378px
+  background-position: 0 -378px;
 }
 
 .adp-substep .adp-stepicon .adp-maneuver.adp-uturn-left {
-  background-position: 0 -305px
+  background-position: 0 -305px;
 }
 
 .adp-substep .adp-stepicon .adp-maneuver.adp-fork-right {
-  background-position: 0 -499px
+  background-position: 0 -499px;
 }
 
 .adp-substep .adp-stepicon .adp-maneuver.adp-ramp-right {
-  background-position: 0 -429px
+  background-position: 0 -429px;
 }
 
 .adp-substep .adp-stepicon .adp-maneuver.adp-roundabout-right {
-  background-position: 0 -232px
+  background-position: 0 -232px;
 }
 
 .adp-substep .adp-stepicon .adp-maneuver.adp-turn-right,
 .adp-substep .adp-stepicon .adp-maneuver.adp-keep-right {
-  background-position: 0 -483px
+  background-position: 0 -483px;
 }
 
 .adp-substep .adp-stepicon .adp-maneuver.adp-turn-sharp-right {
-  background-position: 0 -582px
+  background-position: 0 -582px;
 }
 
 .adp-substep .adp-stepicon .adp-maneuver.adp-turn-slight-right {
-  background-position: 0 -51px
+  background-position: 0 -51px;
 }
 
 .adp-substep .adp-stepicon .adp-maneuver.adp-uturn-right {
-  background-position: 0 -35px
+  background-position: 0 -35px;
 }
 
 .adp button {
@@ -258,10 +256,8 @@ img.adp-marker2 {
   padding: 0;
   margin: 0;
   font-size: inherit;
-  text-align: inherit
+  text-align: inherit;
 }
-
-
 
 .adp-substep .adp-stepicon .adp-maneuver {
   background-image: url(https://maps.gstatic.com/mapfiles/api-3/images/maneuvers_hdpi.png);
